--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "@electron-forge/plugin-auto-unpack-natives": "^7.6.0",
     "@electron-forge/plugin-fuses": "^7.6.0",
     "@electron-forge/plugin-vite": "^7.6.0",
+    "@electron-forge/shared-types": "^7.6.0",
     "@electron/fuses": "^1.8.0",
+    "@types/semver": "^7",
     "@typescript-eslint/eslint-plugin": "^8.18.0",
     "@typescript-eslint/parser": "^8.18.0",
     "electron": "33.3.0",
     "eslint": "^9.17.0",
     "eslint-plugin-import": "^2.31.0",
+    "semver": "^7.6.3",
     "ts-node": "^10.9.2",
     "typescript": "~5.7.2",
     "vite": "^6.0.3"
