--- a/package.json
+++ b/package.json
@@ -1,43 +1,46 @@
 {
-  "name": "coder",
-  "productName": "coder",
-  "version": "1.0.0",
-  "description": "My Electron application description",
-  "main": ".vite/build/main.js",
-  "scripts": {
-    "start": "electron-forge start",
-    "package": "electron-forge package",
-    "make": "electron-forge make",
-    "publish": "electron-forge publish",
-    "lint": "eslint --ext .ts,.tsx ."
-  },
-  "devDependencies": {
-    "@electron-forge/cli": "^7.6.0",
-    "@electron-forge/maker-deb": "^7.6.0",
-    "@electron-forge/maker-rpm": "^7.6.0",
-    "@electron-forge/maker-squirrel": "^7.6.0",
-    "@electron-forge/maker-zip": "^7.6.0",
-    "@electron-forge/plugin-auto-unpack-natives": "^7.6.0",
-    "@electron-forge/plugin-fuses": "^7.6.0",
-    "@electron-forge/plugin-vite": "^7.6.0",
-    "@electron-forge/shared-types": "^7.6.0",
-    "@electron/fuses": "^1.8.0",
-    "@types/semver": "^7",
-    "@typescript-eslint/eslint-plugin": "^8.18.0",
-    "@typescript-eslint/parser": "^8.18.0",
-    "electron": "33.3.0",
-    "eslint": "^9.17.0",
-    "eslint-plugin-import": "^2.31.0",
-    "semver": "^7.6.3",
-    "ts-node": "^10.9.2",
-    "typescript": "~5.7.2",
-    "vite": "^6.0.3"
-  },
-  "keywords": [],
-  "author": "madliani",
-  "license": "MIT",
-  "dependencies": {
-    "electron-squirrel-startup": "^1.0.1"
-  },
-  "packageManager": "yarn@1.22.22"
+	"name": "coder",
+	"productName": "coder",
+	"version": "1.0.0",
+	"description": "My Electron application description",
+	"main": ".vite/build/main.js",
+	"scripts": {
+		"start": "electron-forge start",
+		"package": "electron-forge package",
+		"make": "electron-forge make",
+		"publish": "electron-forge publish",
+		"lint": "biome check --write ./src",
+		"format": "biome format --write ./src"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "^1.9.4",
+		"@electron-forge/cli": "^7.6.0",
+		"@electron-forge/maker-deb": "^7.6.0",
+		"@electron-forge/maker-rpm": "^7.6.0",
+		"@electron-forge/maker-squirrel": "^7.6.0",
+		"@electron-forge/maker-zip": "^7.6.0",
+		"@electron-forge/plugin-auto-unpack-natives": "^7.6.0",
+		"@electron-forge/plugin-fuses": "^7.6.0",
+		"@electron-forge/plugin-vite": "^7.6.0",
+		"@electron-forge/shared-types": "^7.6.0",
+		"@electron/fuses": "^1.8.0",
+		"@types/electron-squirrel-startup": "^1.0.2",
+		"@types/semver": "^7",
+		"@typescript-eslint/eslint-plugin": "^8.18.0",
+		"@typescript-eslint/parser": "^8.18.0",
+		"electron": "33.3.0",
+		"eslint": "^9.17.0",
+		"eslint-plugin-import": "^2.31.0",
+		"semver": "^7.6.3",
+		"ts-node": "^10.9.2",
+		"typescript": "~5.7.2",
+		"vite": "^6.0.3"
+	},
+	"keywords": [],
+	"author": "madliani",
+	"license": "MIT",
+	"dependencies": {
+		"electron-squirrel-startup": "^1.0.1"
+	},
+	"packageManager": "yarn@1.22.22"
 }
