--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
 		"@electron-forge/shared-types": "^7.6.0",
 		"@electron/fuses": "^1.8.0",
 		"@types/electron-squirrel-startup": "^1.0.2",
+		"@types/react": "^19.0.1",
+		"@types/react-dom": "^19.0.2",
 		"@types/semver": "^7",
 		"@typescript-eslint/eslint-plugin": "^8.18.0",
 		"@typescript-eslint/parser": "^8.18.0",
@@ -41,7 +43,9 @@
 	"author": "madliani",
 	"license": "MIT",
 	"dependencies": {
-		"electron-squirrel-startup": "^1.0.1"
+		"electron-squirrel-startup": "^1.0.1",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0"
 	},
 	"packageManager": "yarn@1.22.22"
 }
