--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
 	"license": "MIT",
 	"dependencies": {
 		"@fluentui/react-components": "^9.56.5",
+		"@uiw/codemirror-extensions-langs": "^4.23.6",
+		"@uiw/react-codemirror": "^4.23.6",
 		"electron-squirrel-startup": "^1.0.1",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0"
