--- a/package.json
+++ b/package.json
@@ -30,11 +30,14 @@
 		"@types/semver": "^7",
 		"@typescript-eslint/eslint-plugin": "^8.18.0",
 		"@typescript-eslint/parser": "^8.18.0",
+		"autoprefixer": "^10.4.20",
 		"electron": "33.3.0",
 		"eslint": "^9.17.0",
 		"eslint-plugin-import": "^2.31.0",
 		"oxlint": "^0.15.2",
+		"postcss": "^8.4.49",
 		"semver": "^7.6.3",
+		"tailwindcss": "^3.4.16",
 		"ts-node": "^10.9.2",
 		"typescript": "~5.7.2",
 		"vite": "^6.0.3"
