--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"@typescript-eslint/eslint-plugin": "^8.18.0",
 		"@typescript-eslint/parser": "^8.18.0",
 		"autoprefixer": "^10.4.20",
+		"biwascheme": "^0.8.0",
 		"electron": "33.3.0",
 		"eslint": "^9.17.0",
 		"eslint-plugin-import": "^2.31.0",
