--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
 	"description": "My Electron application description",
 	"main": ".vite/build/main.js",
 	"scripts": {
-		"start": "electron-forge start",
-		"package": "electron-forge package",
-		"make": "electron-forge make",
-		"publish": "electron-forge publish",
+		"electron:start": "electron-forge start",
+		"electron:package": "electron-forge package",
+		"electron:make": "electron-forge make",
+		"electron:publish": "electron-forge publish",
+		"web:dev": "vite --config ./vite.web.config.ts",
+		"web:build": "vite --config ./vite.web.config.ts build",
+		"web:preview": "vite --config ./vite.web.config.ts preview",
 		"lint": "oxlint --allow all ./src && biome check --write ./src",
 		"format": "biome format --write ./src"
 	},
